# Stage

./: .gitignore  README.md  Stage_summary.aux  Stage_summary.tex  Stage_summary.toc  algo_circle_fitting_graph.html  algo_trace_graph.html  build.sh  calibration_camera_DVXplorer_DXA00265-2026_04_23_13_33_50.xml  env.sh  trace_algorithm_explanation.html
recordings/: blanc1.h5  blanc2.h5  bleu1.h5  bleu2.h5  bleu3.h5  event1.h5  event4.h5  events.h5  events3.h5  orange1.h5  orange2.h5  orange3.h5  parabol.h5  test1.h5
recordings/mire_calibration/: intrinsics_from_mire.xml  intrinsics_from_mire_clean_constrained.xml  intrinsics_from_mire_clean_constrained_report.json  intrinsics_from_mire_constrained.xml  intrinsics_from_mire_constrained_report.json  intrinsics_from_mire_report.json  intrinsics_from_mire_robust_constrained.xml  intrinsics_from_mire_robust_constrained_report.json  mire_observation_20260609_103220_752652.json  mire_observation_20260609_103223_354873.json  mire_observation_20260609_103226_125924.json  mire_observation_20260609_103348_951604.json  mire_observation_20260609_103359_575143.json  mire_observation_20260609_103401_498829.json  mire_observation_20260609_111253_675284.json  mire_observation_20260609_111301_199669.json  mire_observation_20260609_111415_523353.json  mire_observation_20260609_111420_199006.json  mire_observation_20260609_111429_123770.json  mire_observation_20260609_111436_924270.json  mire_observation_20260609_111444_275095.json  mire_observation_20260609_111704_948441.json  mire_observation_20260609_111711_448167.json  mire_observation_20260609_111716_074517.json  mire_observation_20260609_111719_224723.json  mire_observation_20260609_111741_749824.json  mire_observation_20260609_111751_997030.json  mire_observation_20260609_111756_773195.json  (+14 more)
scripts/: Ball Tracking.desktop  calibrate_intrinsics_from_mire.py  convert_bin_to_h5.py  event_mire_calibration.py  install_dependencies_ubuntu24.sh  launch_ball_tracking.sh  launch_ball_tracking_terminal.sh  phone_mire.html  run_handeye_session.sh  serve_phone_mire.py  solve_handeye.py
src/Ball_Tracking_Cpp/: CMakeLists.txt  package.xml
src/Ball_Tracking_Cpp/include/Ball_Tracking_Cpp/: BallTracker.hpp  Camera.hpp  EventWriter.h  Gui.h  RegressionAccumulator.hpp  TraceAnalysis.hpp  TraceBenchmark.hpp  util.hpp
src/Ball_Tracking_Cpp/src/: BallTracker.cpp  Camera.cpp  EventWriter.cpp  Gui.cpp  TraceAnalysis.cpp  TraceBenchmark.cpp  ball_tracker_h5_benchmark.cpp  publisher_member_function.cpp
src/ball_tracking/: package.xml  (+1 more)
(+37 files in other folders)
